--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,13 @@
+@import 'https://fonts.googleapis.com/css?family=Cabin';
+
+body {
+  font-family: 'Cabin', sans-serif;
+}
+
+.item img {
+  float: left;
+}
+
 .search {
   margin-top: 30vh;
 }
@@ -22,24 +32,32 @@
   background-color: black;
   color: white;
   padding: 0 5px;
+  font-size: 16px;
 }
 
 .item-description {
-  padding: 0 5px;
+  padding: 0 20px;
 }
 
 .item:hover {
-  border-right-style: solid;
-  border-left-style: solid;
-  border-color: black;
   background-color: #e6e6e6;
-  border-width: 1px;
+  text-decoration: none;
 }
 
-a:hover {
+a {
+  color: black;
+}
+
+li a:hover {
   text-decoration: none;
+  color: black;
 }
 
 li {
   list-style-type: none;
+}
+
+#wiki img {
+  width: 150px;
+  padding-right: 10px;
 }
